# aoc-rs

./: .gitignore  1  Cargo.toml  README.md  callgrind  callgrind.out.2013675  perf.data  perf.data.old
.cargo/: config.toml
benches/: benches.rs
src/: :w  ]  lib.rs  main.rs
src/helper/: matrix.rs  mod.rs  parsing.rs  util.rs
src/solutions/: mod.rs
src/solutions/year2022/: day02.rs  day03.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day23.rs
src/solutions/year2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
src/year2022/: day01.rs  day04.rs
