[package]
name = "aoc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom-supreme = "0.8.0"
once_cell = "1.18.0"
pathfinding = "4.4.0"
rayon = "1.8.0"

[dependencies.aoc_driver]
version = "0.3.6"
default-features = false

[dependencies.bstr]
version = "1.8.0"
default-features = false
features = ["std"]

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
