[package]
name = "aoc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
num = "0.4.1"
num-traits = "0.2.17"
pathfinding = "4.4.0"
rayon = "1.8.0"
rustc-hash = "1.1.0"
set_builder = "5.0.1"

[dependencies.aoc_driver]
version = "0.3.6"
default-features = false

[dependencies.bstr]
version = "1.8.0"
default-features = false
features = ["std"]

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
